# 3d_game_seed

./: Cargo.toml  README.md
assets/mesh/: codi.glb
assets/prefab/: camera.ron  monster.ron  player.ron
config/: display.ron  input.ron
src/: main.rs
src/components/: actors.rs
src/states/: gameplay.rs  loading.rs  mod.rs
