[package]
name = "3d_game_seed"
version = "0.1.0"
authors = ["Geoffrey Hopkins"]
edition = "2018"

[dependencies]
serde = "1.0.90"
derive-new = "0.5"

[dependencies.amethyst]
version = "0.14.0"
features = ["vulkan", "gltf"]

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
